# mlp

./: .gitignore  README.md  README_RUS.md  data.txt  dataq.txt
datasets/: little_set.csv  one_al.txt
misc/research/: learn_result.md
src/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  clang.sh  clang_check.sh  compare_methods.md  learn_result.md  my_matrix.h  parser.h  test.cc
src/MLP/: controller.cpp  controller.h  controller.ui
src/Matrix/: my_matrix.h  neuron_matrix.h
src/Neuro/: .gitignore  CMakeLists.txt  assistant.cpp  assistant.h  controller.cpp  controller.h  controller.ui  custom_graph.ui  gabella.txt  learning_test.cc  main.cpp  paintscene.cpp  paintscene.h  resource.qrc  stresstest.cc  tests.cpp
src/Neuro/Matrix/: my_matrix.h  neuron_matrix.cc  neuron_matrix.h
src/Neuro/Parser/: parser.cc  parser.h
src/Neuro/Perceptron/: perceptron_abstract.h
src/Neuro/ThreadPool/: thread_pool.h
src/Neuro/Timer/: timer.cc  timer.h
src/Neuro/assistant/: assistant.cpp  assistant.h
src/Neuro/data_weights/: data_0e_3l_256_weights.txt  data_1e_2l_256_weights.txt  data_3e_3l_256.txt  data_3e_5l_256_weights.txt  data_5e_5l_256_weights.txt  data_7e_3l_256_weights.txt  data_9e_5l_256_weights.txt  data_g.txt
src/Neuro/grph_method/: perzeptron_grph.cc  perzeptron_grph.h  test.cc
src/Neuro/learn_answer/: learnanswer.cpp  learnanswer.h  learnanswer.ui
src/Neuro/mtx_method/: perzeptron_mtx.cc  perzeptron_mtx.h
src/Neuro/paintscene/: paintscene.cpp  paintscene.h
src/Neuro/resources/: one_case.txt
src/Neuro/thread_pool/: thread_pool.h
src/Perceptron/: perceptron_abstract.h
src/Timer/: timer.cc
src/data_weights/: data_1e_2l_256.txt  data_2e_3l_256.txt  data_4e_5l_256.txt  data_5e_3l_256.txt  data_8e_3l_256.txt
src/mtx_method/: multi.cc  perzeptron_mtx.cc  perzeptron_mtx.h
